	0100 need train/test switch for nce and dropout.
	0100 src/op/drop.jl: implement rnd.  implement dropout using rnd and mul.
	0100 handout-mtg Also conv/pool/rnd/con in the handout have not yet been implemented.
	0100 src/net.jl: handle con and rnd in tosave.
	0100 ashish nce model
	0200 ai-mtg: Onur and Ozan's bidirectional model.
	0300 need better net combo
	1000 get rid of input() and use constructor arguments instead?
	1000 Barrett's training tricks from Google: 1. Element wise clip the cell states so they do not go above 50, 2. Clip the norm elementwise at a threshold value (I do not know what they use), 3. Take the total norm of all matrices except the input embeddings and rescale the norm so it is <=5
	1000 Ozan's optimization tricks: We are using adam. There is no common choice for optimization method. People use adam, rmsprop, momentum or their own learning rate schedule. Some tricks: - Norm clipping - Truncated backprop for large sequences - Batching sequences - Initializing hidden to hidden weights with identity matrix for elman type networks with relu activation - Large initial values for forget gate bias in LSTMs.  In response to: are you guys using adam, rmsprop, adadelta, adagrad etc?  what tricks to people prefer for training rnns?
	1000 ai-mtg: Being able to access arrays with original variable names.
	1000 ai-mtg: Copy instruction for going back two time steps.
	1000 ai-mtg: kernels and perceptrons.
	1000 barett s2s test (copying english?)
	1000 embedded expr: do we really need to?  abstraction takes care of most variable hiding.
	1000 handout-mtg Avoid variables by allowing embedded expressions.
	1000 handout-mtg Replace 0's with ? or _ in dimensions.
	1000 mul2: change order to x1,x2,y
	1000 perclossback: these should be scaled 1/nx, why isn't our gradient check complaining?
	1000 model.jl: add predict, load, save
	1000 src/net/forw.jl: get rid of sequence forw? have one type of forw with options (seq vs keepstate do we need both?)